womtool/src/test/resources/validate/wdl/wdl_draft3/invalid/bad_input_assignment_type/bad_input_assignment_type.wdl
version 1.0

workflow bad_assignment_type {
  input {
    Array[String] y = 57
  }
  output {
    Array[String] strings = y
  }
}
